packages/breadcrumbs/src/breadcrumbs.pcss
.sds-breadcrumbs {
  color: var(--sds-color-text-secondary);
  font-size: var(--sds-typography-body-fontsize-small);
  line-height: var(--sds-typography-body-lineheight-small);

  &__list {
    display: flex;
    gap: var(--sds-space-gap-tiny);
  }

  &-item {
    &:not(:last-child) {
      &::after {
        content: "/";
        margin-left: var(--sds-space-gap-tiny);
      }
    }
  }
}

